fixed spacing in nav

--- a/css/styles.css
+++ b/css/styles.css
@@ -45,12 +45,8 @@ form {
         flex-direction: row;
         justify-content: flex-end;
     }
-    .item1 {
-        margin-right: 1rem;
-    }
-    .item2 {
-        margin-right: 1rem;
-    }
+    .item1,
+    .item2,
     .item3 {
         margin-right: 1rem;
     }
